--- a/Calendrier/src/main/resources/application.properties
+++ b/Calendrier/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.username=sa
 spring.datasource.password=pass
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jackson.date-format=yyyyMMdd
